--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 .container{
   display: flex;
   overflow: hidden;
-  background-image: url(resourses\\background.jpg);
+  background-image: url(resourses\\back.jpg);
   background-repeat: repeat;
   background-size: auto;
   justify-content:flex-start;
@@ -323,15 +323,40 @@ footer{
   padding: 10px;
 }
 
-.iconblock{
-/*  position : relative;*/
+.icons{
+  width: 100%;
+}
 
+.icon_row{
+  width: 100%;
   display: flex;
- justify-content: flex-start;
-  font-style: "Stalinist-One";
-  padding-bottom: 15px;
+  margin-top: 25px;
+
 }
 
-.icon{
-  margin-left: 100px;
+.icon_img, .icon_text{
+  display: inline-flex;
 }
+
+.icon_img{
+  margin-left: 20%;
+}
+
+.icon_text {
+  margin-left: 10%;
+  margin-right: 25%;
+  margin-top: 25px;
+
+}
+
+/*.icons{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.iconblock{
+  margin-left: 50px;
+  width: 60%;
+  margin-bottom: 60px;
+}*/
